Fixed wrong footer size on small displays.

--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -41,12 +41,3 @@ body {
   top: 13px;
   right: 10px;
 }
-
-@media (max-width: 767px) {
-  #footer {
-    margin-left: -20px;
-    margin-right: -20px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-}
